--- a/src/pages/Item/Item.css
+++ b/src/pages/Item/Item.css
@@ -102,7 +102,7 @@
 .details {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
   padding-top: 0;
 }
 
@@ -228,6 +228,7 @@
   }
 
   .main-image-box {
+    width: 90%;
   margin: 0 auto;
 }
 
